_sass/desktop.scss
// @import "{{ site.theme }}";

//only desktop
@media only screen and (min-width: 600px) {
	.about-content{
		flex-direction: row;
	}
  .desktop-flex{
    display: flex;
  }
  .mr-85p{
    margin-right: 85px;
  }
  .site-title {
    &,
    &:visited {
      color: white;
    }
  }

  .site-nav{
    .page-link{
      color: white;
			// text-underline-position: under;
        &:last-child {
          margin-right: 20px;
        }
      }
    }
	.act-now-squares{
		flex-direction: row;
		flex-wrap: wrap;
	}
	.join-us-squares{
		flex-direction: row;
		flex-wrap: wrap;
	}
	.square-margin{
		width:25%;
	}
	.act-now-move-up{
		transform: translate(0, -10rem);
	}
	.square-text{
		font-size: 3vw;
		line-height: 1;
	}
	.page-headers{
		height: 75vh;
	}
	.join-us-header{
			background-image: url("images/join-us.webp");
			background-position: center;
			background-repeat: no-repeat;
			background-size: cover;
			justify-content: space-around;
	}
	.join-us-telegram{
		margin-left: 50vw;
		margin-right: 5rem;
	}
	.hero-h{
		height: 75vh;
	}
	.overlay{
		// padding-bottom: 5vh;
	}
	.hero{
		// padding-bottom: 1rem;
		.hero-title{
			font-size: 12vw;
			height: auto;
			margin-top: 10vw;
		}
		.hero-text{
			font-size: 1.8vw;
			width: 50%;
		}
	}
	.about-title{
    margin-right: 0;
    // padding-left: calc(30px + 4vw);
  	// padding-right: calc(30px + 4vw);
	}
	.about-content{
		text-align: right;
		align-items: baseline;
		padding: 0;
		div{
			height: 50%;
			width: 25%;
			// margin: 0 2% 0 2%;
		}
	}
	.site-header{
		height: 97px;
    display: flex;
    justify-content: space-between;
    align-items: center;
	}
	.btn-black{
		// padding: 5px 30px 5px 30px;
		font-size: 1.5rem;
	}
	.third-section{
		flex-direction: row;
		margin-bottom: 7vh;
		// justify-content: space-around;
	}
	.image-group{
		display: block;
		width: 90%;
		margin: 5vh auto 5vh auto;

	}
	.events-contents{
		display: flex;
		flex-wrap: wrap;
		width: 50%;
		.event{
			width: 35%;
      margin-left: 4vw;
			p{
				max-height: 30vh;
				overflow: hidden;
				text-overflow: ellipsis;
			}
		}
	}

.mobile-mx-2rem{
  margin-left: 0;
  margin-right: 0;
}
	.events-title{
		text-align: right;
	}
	.events-section{
		padding: 2rem 4rem 2rem 4rem;
		text-align: right;
		display: flex;
		flex-direction: column;
	}
	.events-btn{
		align-self: flex-end;
	}
	.square-image{
		margin-bottom: 1vw;
	}
	.square-margin.margin{
		margin: 2rem;
	}
	.news.news-page{
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: space-around;
		align-items: center;
		.post{
			width: 40%;
			margin: 1rem;

		}
	}
	.post-image{
		height: 50vh;
		width: 100%;
		background-position: center;
		background-size: cover;
	}
	.events-events{
		// display: flex;
		// flex-direction: row;
		// flex-wrap: wrap;
		width: 50%;
		.event{
			// margin: 3rem;
			width: 100%;

		}
	}
	.read-more{
		display: none;
	}
	.read-less{
		display: none;
	}


  .donate-join-desktop{
    margin-left: 85px;
    .page-link{
      margin-right: 20px
    }
  }
  .social-section{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding-top: 10vh;
    padding-bottom: 10vh;
    margin: 0;
    div{
      width: 30%;
    }
    .global-site{
      margin: 0;
    }
    .social-icons{
      align-items: center;
      a{
        width: 15%;
        margin-left: 1vw;
        margin-right: 1vw;

      }
      .social-icon{
        width: 100%;
      }
    }
  }
  .desktop-hidden{
    display: none;
  }
  .trigger{
    display: flex;
    align-items: center;
  }
  .donate-circle{
    display: none;
  }
  .xr-online{
    padding-bottom: 0;
  }

  .about-page-content{
    flex-direction: row;
    justify-content: space-around;
    font-size: 1.1rem;
    padding: 5vw 0rem 5rem 5vw;
    align-items: baseline;
    div{
      width: 25vw;
      padding-right: 3rem;
    }
  }
  .demands{
    // padding-right: 2rem;
    div{
      // padding-right: 2rem
    }
  }
  .demands-div{
    display: flex;
    flex-direction: row;
    margin-bottom: 5vh;
  }
  .demand-div{
    width: 30vw;
    padding: 5vw 0rem 5rem 5vw;
    padding-right: 0 !important;
  }
  .demands-btn{
    margin-bottom: 5vh;
    // padding-right: 2rem
  }
  .values-flex{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .pr-2{
    padding-right: 2rem
  }
  .value-list{
    width: 35vw;
  }
  .values{
    // padding: 0 5vw 0 5vw;
  }
  .basic-padding{
    padding-left: 5vw;
    padding-right: 5vw;
    *{
      // padding: 0;
    }
  }
  .structure-image{
    display: block;
		width: 80%;
		float: left;
  }
  .structure-flex{
    display: flex;
    flex-direction: row;
    // align-items: flex-start;
    justify-content: space-between;
  }
  .structure-text{
    width: 120%;
  }
	.site-footer{
		flex-direction: row;
		padding-bottom: 5vh;
		justify-content: space-between;
		div{
			width: 50%;
		}
		.footer-left{
			display: flex;
			flex-direction: column;
			width: 30%;
		}
		.copyright-content{
			font-size: 1rem;
			width: 100%;
		}
	}
	.footer-image{
		height: 20vh;
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
		div{
			font-size: calc(30px + 5vw) !important;
			display: flex;
			justify-content: center;
			align-items: center;
		}
	}
	.join-us-squares{
		.square-margin{
			margin: 2rem;
		}
	}
	.current-page{
		text-decoration: underline;
		text-underline-position: under;
	}
	.news-flex {
		display: flex;
		justify-content: space-between;
	}
}

